src/components/kits/Tile.css
.TileFolder {
  --size-folder-margin-y: 3px;
  --size-folder-margin-x: 15px;
  --size-folder-margin-y: 5px;
  --size-folder-padding-x: 15px;
  --size-folder-padding-y: 5px;
  --size-folder-item-margin: 5px;
  --size-folder-item-padding: 5px;
  --size-folder-item-width: 160px;
  --size-folder-item-height: 48px;
  --size-icon: 16px;
}

.TileFolder {
  border-radius: 3px;
  margin-top: var(--size-folder-margin-y);
  margin-bottom: var(--size-folder-margin-y);
  margin-left: var(--size-folder-margin-x);
  margin-right: var(--size-folder-margin-x);
  padding-top: var(--size-folder-padding-y);
  padding-bottom: calc(var(--size-folder-padding-y) - var(--size-folder-item-margin));
  padding-left: var(--size-folder-padding-x);
  padding-right: calc(var(--size-folder-padding-x) - var(--size-folder-item-margin));
  background-color: var(--palette-2);
}

.TileFolder__Heading {
  margin-left: 2px;
}

.TileFolder__Heading__Expand {
  width: var(--size-folder-item-width);
  vertical-align: top;
}

.TileFolder__Heading,
.TileFolderItem {
  position: relative;
  display: inline-block;
  margin-bottom: var(--size-folder-item-margin);
  margin-right: var(--size-folder-item-margin);
}

.TileFolder__HeadingText {
  font-size: 120%;
}

.TileFolderItem__ButtonBadge {
    position: absolute;
    border-radius: 3px;
    background-color: var(--palette-2);
    width: 16px;
    height: 16px;
    text-align: center;
    color: var(--palette-00);
    margin-top: calc(var(--size-folder-item-height) - 16px - var(--size-folder-item-padding));
    margin-left: var(--size-folder-item-padding);
}

.TileFolderItem__Button {
  overflow: hidden;
  border-width: 1px;
  border-style: solid;
  border-color: transparent;
  border-radius: 3px;
  width: var(--size-folder-item-width);
  height: var(--size-folder-item-height);
  background-color: var(--palette-3);
}

.TileFolderItem__Button:hover {
  background-color: var(--palette-2);
  box-shadow: 0 0 calc(var(--size-folder-item-margin) * 3) var(--palette-01);
}

.TileFolderItem__ButtonBody {
  padding: var(--size-folder-item-padding);
  padding-left: calc(var(--size-folder-item-padding) * 2 + var(--size-icon));
  background-repeat: no-repeat;
  /* background-image should be given in HTML */
  background-position-x: var(--size-folder-item-padding);
  background-position-y: var(--size-folder-item-padding);
  background-size: 16px;
}

.TileFolderItem__EditButton {
  position: absolute;
  bottom: var(--size-folder-item-padding);
  right: 0;
}

.TileFolderItem .TileFolderItem__EditButton {
  display: none;
}

.TileFolderItem:hover .TileFolderItem__EditButton {
  display: block;
}

.TileFolderItem__EditButton a {
  padding-bottom: var(--size-folder-item-padding);
  padding-right: var(--size-folder-item-padding);
  padding-left: var(--size-folder-item-padding);
  border-radius: 3px;
  color: var(--palette-1);
  font-size: 120%;
  font-weight: bold;
}

.TileFolderItem__EditButton a:hover {
  color: var(--palette-01);
  background-color: var(--palette-2);
}

